--- a/HTMLCSSBootcamp/css/114-121-Blog-Post-Project.css
+++ b/HTMLCSSBootcamp/css/114-121-Blog-Post-Project.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   letter-spacing: 0.5px;
+  box-sizing: border-box;
 }
 
 h1,
@@ -13,12 +14,44 @@ h4,
 h5,
 h6 {
   font-family: Bitter, serif;
+  font-weight: 500;
+}
+
+code {
+  color: #e95400;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: 400;
+  letter-spacing: -1.5px;
 }
 
 h2 {
   font-size: 50px;
-  font-weight: 500;
   letter-spacing: -0.5px;
+}
+
+h3 {
+  font-size: 38px;
+  letter-spacing: 0px;
+  text-transform: capitalize;
+}
+
+h4 {
+  font-size: 30px;
+  letter-spacing: 0.25px;
+}
+
+h5 {
+  font-size: 24px;
+  letter-spacing: 0.25px;
+}
+
+h6 {
+  font-size: 20px;
+  letter-spacing: 0.25px;
 }
 
 .content {
@@ -45,6 +78,7 @@ h2 {
   font-weight: 500;
   letter-spacing: 0;
   margin: 40px 0;
+  font-size: 18px;
 }
 
 .quote {
@@ -59,4 +93,33 @@ h2 {
   display: block;
   font-weight: bold;
   margin-left: 20px;
+}
+
+footer {
+  background-color: #863ae8;
+}
+
+footer ul {
+  margin: 0 auto;
+  padding-left: 0;
+  width: 100%;
+  max-width: 900px;
+  text-align: center;
+  list-style: none;
+  padding: 28px 0;
+}
+
+footer ul li {
+  display: inline;
+  padding: 0 16px;
+}
+
+footer ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+footer ul li a:hover {
+  color: white;
+  text-decoration: underline;
 }
