--- a/HTMLCSSBootcamp/css/114-121-Blog-Post-Project.css
+++ b/HTMLCSSBootcamp/css/114-121-Blog-Post-Project.css
@@ -26,6 +26,7 @@ h1 {
   font-size: 80px;
   font-weight: 400;
   letter-spacing: -1.5px;
+  margin: 0;
 }
 
 h2 {
@@ -122,4 +123,27 @@ footer ul li a {
 footer ul li a:hover {
   color: white;
   text-decoration: underline;
+}
+
+/* Hero section css */
+.hero {
+  background-color: #863ae8;
+  height: 100vh;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero h1,
+.hero p {
+  width: 75%;
+  max-width: 900px;
+  text-align: center;
+  margin: 16px 0;
+}
+
+.hero hr {
+  width: 50%;
 }
