--- a/HTMLCSSBootcamp/css/129-136-Hazel-CV-Project.css
+++ b/HTMLCSSBootcamp/css/129-136-Hazel-CV-Project.css
@@ -1,3 +1,24 @@
-h1 {
-  color: purple;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 1px solid gray;
+}
+
+/* hero section */
+.hero {
+  width: 100%;
+  height: 90vh;
+  background-color: #f08e80;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.navbar-menu {
+  display: flex;
+  align-items: center;
 }
