--- a/HTMLCSSBootcamp/css/129-136-Hazel-CV-Project.css
+++ b/HTMLCSSBootcamp/css/129-136-Hazel-CV-Project.css
@@ -7,8 +7,9 @@ body {
 
 /* hero section */
 .hero {
+  display: inline-block;
   width: 100%;
-  height: 90vh;
+  min-height: 90vh;
   background-color: #f08e80;
 }
 
@@ -41,4 +42,79 @@ body {
 
 .navbar-cta .contact:hover {
   opacity: 0.8;
+}
+
+.hero-content {
+  padding: 0 15%;
+  color: white;
+}
+
+.tagline {
+  font-size: 4.5rem;
+  color: white;
+  letter-spacing: 2px;
+  padding: 32px 0;
+}
+
+.two-columns-section {
+  font-size: 2rem;
+}
+
+.two-columns-section > p {
+  width: 49%;
+  box-sizing: border-box;
+  float: left;
+}
+
+.two-columns-section .skills {
+  width: 49%;
+  box-sizing: border-box;
+  float: left;
+  list-style: none;
+  padding-left: 0;
+}
+
+.two-columns-section .skills li {
+  font-size: 1.25rem;
+  width: 50%;
+  float: left;
+  margin: 8px 0;
+}
+
+/* blog section */
+.blog-section {
+  display: inline-block;
+  width: 100%;
+  padding: 64px 0;
+}
+
+.blog-content {
+  padding: 0 15%;
+}
+
+.two-columns-section .blog-post {
+  width: 50%;
+  float: left;
+}
+
+.blog-title {
+  font-size: 1.5rem;
+}
+
+.blog-text {
+  font-size: 1rem;
+}
+
+.blog-post {
+  margin-top: 24px;
+}
+
+.blog-post .blog-date {
+  font-size: 0.8rem;
+  color: gray;
+  margin-bottom: 32px;
+}
+
+.blog-post p {
+  margin: 8px 0;
 }
