--- a/Dibimbing/TailwindCSS/HandsOnTailwind1/src/input.css
+++ b/Dibimbing/TailwindCSS/HandsOnTailwind1/src/input.css
@@ -8,6 +8,10 @@
     transform: scale(1.05);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   }
+
+  .smooth-scroll {
+    scroll-behavior: smooth;
+  }
 }
 
 @layer components {
